CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT (LownuFitter)

SET(CMAKE_CXX_STANDARD 17)

FIND_PACKAGE(ROOT REQUIRED 
    COMPONENTS RIO Net RooFit Html Minuit RooFitCore)
INCLUDE(${ROOT_USE_FILE})

SET(source
    src/LownuFitter.cxx
    src/LownuFCN.cxx)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${source})
TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} ${ROOT_LIBRARIES})
