CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

SET(CMAKE_CXX_STANDARD 17)

FIND_PACKAGE(ROOT REQUIRED 
    COMPONENTS RIO Net RooFit Html Minuit RooFitCore)
INCLUDE(${ROOT_USE_FILE})

#TARGET_INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
#src/LownuFitter.cxx
#src/LownuFCN.cxx)

SET(LOWNU_SRC
    src/LowNuFitter.cxx 
    src/LowNuFCN.cxx
    src/Utils.cxx)

ADD_EXECUTABLE(LowNuFitter ${LOWNU_SRC})
TARGET_LINK_LIBRARIES(LowNuFitter ${ROOT_LIBRARIES})

SET(HIGHNU_SRC
    src/LowNuFitter.cxx 
    src/LowNuFCN.cxx
    src/Utils.cxx)

ADD_EXECUTABLE(HighNuFitter ${HIGHNU_SRC})
TARGET_LINK_LIBRARIES(HighNuFitter ${ROOT_LIBRARIES})
